
message OtherUserInfo {
	required string user_name = 1;
	optional string nickname = 2;	
	optional int32 power = 3;
	repeated int32 id_lineup = 4;
	required int32 level = 5;
	repeated int32 lv_lineup = 6;
	required  int32 icon_id = 7;
	optional string group_nickname = 8;
	optional int32 level_rank = 9;
	optional int32 power_rank = 10;
	repeated int32 building_level_list = 11;
	optional int32 main_city_level_rank = 12;
	optional int32 max_trial_level = 13;
	optional int32 max_trial_level_rank = 14;
	optional int32 max_trial_star = 15;
	repeated int32 break_lineup = 16;
	optional int32 attack_count = 17;
	optional int32 defence_count = 18;
	optional int32 win_count = 19;
	optional string groupid = 20;
	optional int32 vip_level = 21;
}

message OtherGroupInfo{
	required string groupid = 1;
	optional string nickname = 2;
	optional int32 icon_id = 3;
	optional int32 level = 4;
	optional int32 power = 5;
	optional string leader_name = 6;
}